fixed awkwardly small spacing between text

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 200px;
+    width: 270px;
 }
 
 #marvtext {
